Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19731

TextInput: selectionStartChanged and selectionEndChanged signals not emitted after QInputMethodEvent::Selection

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 4.7.3
    • None
    • windows
      qt-releases:4.7 sha:570f8970bea646055583671397c3d2706ac45004

    Description

      SelectionStartChanged and selectionEndChanged signals not emitted after QInputMethodEvent::Selection.

      Steps to reproduce:
      1. Apply patch
      2. Compile and run tst_qdeclarativetextinput.exe

      Expected result: autotest pass
      Actual result: tst_qdeclarativetextinput::inputMethodSelection() fails

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes